Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-122915

[REG 6.6.1-6.6.2] Overlay remains visible when a Popup is destroyed via Loader

    XMLWordPrintable

Details

    • macOS, Windows
    • 30ae9e99e (dev), 92446b9de (6.7), 4afb76ae0 (6.6)

    Description

      Overlay remains visible when a Popup is destroyed via Loader. Regression since Qt 6.6.2.

      Sample code:

      import QtQuick
      import QtQuick.Controls
      
      Window {
          width: 640
          height: 480
          visible: true
      
          Loader {
              id: loader
              active: false
              sourceComponent: Item {
                  anchors.fill: parent
                  Popup {
                      modal: true
                      visible: true
                      Overlay.modal: Rectangle { color: 'grey' }
                  }
              }
          }
      
          Component.onCompleted: {
              loader.active = true
              loader.active = false
          }
      }
      

      Steps to reproduce:
      1. Launch sample code
      2. Observe window

      Actual results: no popup, but overlay is still visible
      Expected results: no popup, no overlay

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              studiosus Vladimir Belyavsky
              studiosus Vladimir Belyavsky
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes