QQuickPopup: always run exit transition on hiding a popup

Amends c16dc16cafa78ea2a3d1ef6e374f46d6632da779. Do actually what
the comment said "Do not start EnterTransition for a popup in
QQuickPopup::setVisible() when the popup is not yet associated with
any window" but do _not_ touch original ExitTransition logic.

Fixes: QTBUG-122915
Change-Id: I77db41254d1c1966f4b3b5285e26efd0487da51b
Reviewed-by: Volker Hilsheimer <volker.hilsheimer@qt.io>
Reviewed-by: Qt CI Bot <qt_ci_bot@qt-project.org>
Reviewed-by: Santhosh Kumar <santhosh.kumar.selvaraj@qt.io>
(cherry picked from commit 30ae9e99e275d9c2288a14120b36f763a9d88c78)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>
(cherry picked from commit 92446b9de8f66d5f730cdab1ec8907bda30b2c65)